# Pindar

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/application/: CMakeLists.txt
firmware/components/app/: CMakeLists.txt  imu_sensor_vibr_test.cpp  imu_sensor_vibr_test.h
firmware/components/comm/: CMakeLists.txt
firmware/components/drivers/: CMakeLists.txt  current_meter.h  icm42688.cpp  icm42688.h  imu_sensor_interface.h  pulse_gen.h  serial.h
firmware/components/drivers/imu_sensor/: adis16460.cpp  adis16460.h  icm42688.cpp  icm42688.h  (+1 more)
firmware/components/mcu/: CMakeLists.txt  spi.h
firmware/components/module/: CMakeLists.txt  attitude.cpp  controller.h  cpu_monitor.h  imu.cpp  imu.h  imu_module.cpp  imu_module.h  imu_sensor_interface.h  param.h
firmware/components/pindar/: CMakeLists.txt  dc_motor_4wd.h  gpio_intr.h  pindar.cpp  pindar.h  pindar_config.h
firmware/main/: CMakeLists.txt  cpu_monitor.h  dc_motor.cpp  dc_motor.h  dc_motor_driver.cpp  gpio_intr.h  icm42688.c  icm42688.cpp  icm42688.h  idf_component.yml  imu_module.cpp  imu_module.h  imu_sensor_interface.h  imu_sensor_vibr_test.cpp  imu_sensor_vibr_test.h  main.cpp  param.h  pindar.cpp  pindar.h  pindar_config.h  spi.h
firmware/mcu/: CMakeLists.txt  pindar.h  pindar_api.c  pindar_api.h  pindar_config.h
firmware/mcu/driver/: current_meter.c  current_meter.h
firmware/module/: battery.cpp  imu.cpp  imu.h  imu_mod.h  pid_controller.h
firmware/tools/: sensor_vibr_test.py
firmware/tools/imu_sensor_vbr_test/: parse.py  recorder.py
(+207 files in other folders)
